--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,4 +3,12 @@
 
 @import "components/search-bar";
 @import "components/video-list";
+@import "components/video-list-item";
 @import "components/video-detail";
+
+
+* {
+
+  font-family: Arial, Helvetica, sans-serif;
+
+}
