--- a/src/scss/components/_video-detail.scss
+++ b/src/scss/components/_video-detail.scss
@@ -4,12 +4,21 @@
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
+
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
-  .video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+
+  .video-detail-details {
+    position: relative;
+    padding: .7rem .5rem 0;
+    .details-title {
+      font-weight: bold;
+    }
   }
 }
